--- a/attempt-1/simple-python-app/buildspec.yml
+++ b/attempt-1/simple-python-app/buildspec.yml
@@ -1,28 +1,28 @@
-version: 0.2
-
 env:
-  # Remove the parameter-store section since we'll use direct credentials
-
+  parameter-store:
+    DOCKER_REGISTRY_USERNAME: myapp-docker-credentials-username
+    DOCKER_REGISTRY_PASSWORD: myapp-docker-credentials-password
+    DOCKER_REGISTRY_URL: myapp-docker-registry-url
 phases:
-  install:
-    runtime-versions:
-      python: 3.11
-  pre_build:
-    commands:
-      - echo "Installing dependencies..."
-      - pip install -r attempt-1/simple-python-app/requirements.txt
-  build:
-    commands:
-      - echo "Running tests..."
-      - cd attempt-1/simple-python-app/
-      - echo "Building Docker image..."
-      - docker login -u devops8297 -p 14n31a0370@MEC docker.io
-      - docker build -t docker.io/devops8297/simple-python-flask-app:latest .
-      - docker push docker.io/devops8297/simple-python-flask-app:latest
-  post_build:
-    commands:
-      - echo "Build completed successfully!"
+  install:
+    runtime-versions:
+      python: 3.11
+  pre_build:
+    commands:
+      - echo "Installing dependencies..."
+      - pip install -r attempt-1/simple-python-app/requirements.txt
+  build:
+    commands:
+      - echo "Running tests..."
+      - cd attempt-1/simple-python-app/
+      - echo "Building Docker image..."
+      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
+      - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest" .
+      - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest"
+  post_build:
+    commands:
+      - echo "Build completed successfully!"
 artifacts:
-  files:
-    - '**/*'
-  base-directory: ../simple-python-app
+  files:
+    - '**/*'
+  base-directory: ../simple-python-app
