--- a/attempt-1/simple-python-app/buildspec.yml
+++ b/attempt-1/simple-python-app/buildspec.yml
@@ -1,3 +1,5 @@
+version: 0.2
+
 env:
   parameter-store:
     DOCKER_REGISTRY_USERNAME: myapp-docker-credentials-username
@@ -10,13 +12,13 @@ phases:
   pre_build:
     commands:
       - echo "Installing dependencies..."
-      - pip install -r attempt-1/simple-python-app/requirements.txt
+      - pip install -r day-13/simple-python-app/requirements.txt
   build:
     commands:
       - echo "Running tests..."
-      - cd attempt-1/simple-python-app/
+      - cd day-13/simple-python-app/
       - echo "Building Docker image..."
-      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"  # Corrected line
+      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
       - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest" .
       - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest"
   post_build:
